"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-43-b:
	  Clean-up only (no tag): perm'd hcaknet's caching of node names.


2009-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-43:
	  hacknet: added cae-sensitivity checking (on by default)
		with option case_collision=[ignore|warn|error].
		added reserved_name configuration option that accumulates
		reserved names of nodes to check against during 
		generation, comparing against post-case-converted, 
		and post-mangled names.  
		Now checks for post-mangling name collisions.
	  Test cases added, trivial ones updated.  Documented.


2009-10-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-42:
	  Added case-collision checking into front-end which issues a
		warning by default, and can be configured to ignore or error
		out with -f case-collision=[ignore|warn|error].
	  Added new test cases, and updated old ones, added ignore flag
		where we don't care.  


2009-10-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-41:
	  No source revision.
	  Added script hackt-env for single-command environment modification.
	  Enhanced verilog tests in testsuite.
	  see also lib/ChangeLog, test/ChangeLog


2009-10-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-40:
	  vpi-hacprsim.cc: now nicely abort by calling vpi_control(vpiFinish)
		instead of throwing an uncaught exception.
		This allows the host simulator to perform cleanups
		such as closing files and finishing traces.  
	  Actually added a test case for this.


2009-10-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-39:
	  All hackt programs are given -h (help) and -v (version) options.