@@ -1,6 +1,6 @@
 /**
 	\file "Object/lang/PRS_footprint_macro.h"
-	$Id: PRS_footprint_macro.h,v 1.4 2009/09/14 21:16:58 fang Exp $
+	$Id: PRS_footprint_macro.h,v 1.5 2009/10/29 18:05:23 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_LANG_PRS_FOOTPRINT_MACRO_H__
@@ -19,9 +19,7 @@ namespace PRS {
  */
 class footprint_macro : public cflat_visitee, public directive_base {
 public:
-#if PRS_LITERAL_ATTRIBUTES
 	resolved_attribute_list_type		attributes;
-#endif
 
 	footprint_macro() : directive_base() { }
 
@@ -33,7 +31,6 @@ public:
 	void
 	accept(cflat_visitor&) const;
 
-#if PRS_LITERAL_ATTRIBUTES
 	void
 	collect_transient_info_base(persistent_object_manager&) const;
 
@@ -42,7 +39,6 @@ public:
 
 	void
 	load_object_base(const persistent_object_manager&, istream&);
-#endif
 
 	void
 	write_object(const persistent_object_manager& m, ostream& o) const {
